// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`[Options Component] renders CheckOptionStory without crashing 1`] = `
<body>
  <div>
    <div
      class="rcx-box rcx-box--full rcx-css-cnp486"
    >
      <div
        class="rcx-box rcx-box--full rcx-options"
        value="1"
      >
        <div
          class="rcx-box rcx-box--full rcx-tile--elevation-2 rcx-tile rcx-css-2lacg2"
        >
          <ol
            aria-activedescendant="1"
            aria-multiselectable="true"
            class="rcx-box rcx-box--full rcx-tile--elevation-0 rcx-tile rcx-css-1prma2i rcx-css-1u2ujs0"
            role="listbox"
          >
            <li
              aria-disabled="false"
              aria-selected="false"
              class="rcx-item rcx-item--inset-md rcx-item--clickable rcx-item--focused rcx-option rcx-option--focus"
              role="option"
              value="1"
            >
              <div
                class="rcx-item__content rcx-option__content"
              >
                <div
                  class="rcx-item__title"
                  id="_r_8_"
                >
                  a teste 1
                </div>
              </div>
              <label
                class="rcx-box rcx-box--full rcx-check-box"
              >
                <input
                  aria-hidden="true"
                  class="rcx-box rcx-box--full rcx-check-box__input"
                  inert=""
                  readonly=""
                  tabindex="-1"
                  type="checkbox"
                />
                <i
                  aria-hidden="true"
                  class="rcx-box rcx-box--full rcx-check-box__fake"
                />
              </label>
            </li>
            <li
              aria-disabled="false"
              aria-selected="false"
              class="rcx-item rcx-item--inset-md rcx-item--clickable rcx-option"
              role="option"
              value="2"
            >
              <div
                class="rcx-item__content rcx-option__content"
              >
                <div
                  class="rcx-item__title"
                  id="_r_9_"
                >
                  b teste 2
                </div>
              </div>
              <label
                class="rcx-box rcx-box--full rcx-check-box"
              >
                <input
                  aria-hidden="true"
                  class="rcx-box rcx-box--full rcx-check-box__input"
                  inert=""
                  readonly=""
                  tabindex="-1"
                  type="checkbox"
                />
                <i
                  aria-hidden="true"
                  class="rcx-box rcx-box--full rcx-check-box__fake"
                />
              </label>
            </li>
            <li
              aria-disabled="false"
              aria-selected="true"
              class="rcx-item rcx-item--inset-md rcx-item--clickable rcx-item--selected rcx-option rcx-option--selected"
              role="option"
              value="3"
            >
              <div
                class="rcx-item__content rcx-option__content"
              >
                <div
                  class="rcx-item__title"
                  id="_r_a_"
                >
                  c teste 3
                </div>
              </div>
              <label
                class="rcx-box rcx-box--full rcx-check-box"
              >
                <input
                  aria-hidden="true"
                  checked=""
                  class="rcx-box rcx-box--full rcx-check-box__input"
                  inert=""
                  readonly=""
                  tabindex="-1"
                  type="checkbox"
                />
                <i
                  aria-hidden="true"
                  class="rcx-box rcx-box--full rcx-check-box__fake"
                />
              </label>
            </li>
            <li
              aria-disabled="false"
              aria-selected="false"
              class="rcx-item rcx-item--inset-md rcx-item--clickable rcx-option"
              role="option"
              value="4"
            >
              <div
                class="rcx-item__content rcx-option__content"
              >
                <div
                  class="rcx-item__title"
                  id="_r_b_"
                >
                  d testeadsasdasdasdasdjhasjfhasdkjfhaskdfjhkasjdfhkasjdhfkasjdhfkasjdhfkasjdhfkasdjhfkasdjhfaksjdfhkasjdh 4
                </div>
              </div>
              <label
                class="rcx-box rcx-box--full rcx-check-box"
              >
                <input
                  aria-hidden="true"
                  class="rcx-box rcx-box--full rcx-check-box__input"
                  inert=""
                  readonly=""
                  tabindex="-1"
                  type="checkbox"
                />
                <i
                  aria-hidden="true"
                  class="rcx-box rcx-box--full rcx-check-box__fake"
                />
              </label>
            </li>
          </ol>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`[Options Component] renders CustomEmpty without crashing 1`] = `
<body>
  <div>
    <div
      class="rcx-box rcx-box--full rcx-css-cnp486"
    >
      <div
        class="rcx-box rcx-box--full rcx-options"
      >
        <div
          class="rcx-box rcx-box--full rcx-tile--elevation-2 rcx-tile rcx-css-2lacg2"
        >
          <ol
            aria-multiselectable="true"
            class="rcx-box rcx-box--full rcx-tile--elevation-0 rcx-tile rcx-css-1prma2i rcx-css-1u2ujs0"
            role="listbox"
          >
            <li
              aria-disabled="true"
              aria-selected="false"
              class="rcx-item rcx-item--inset-md rcx-item--clickable rcx-item--disabled rcx-option rcx-option--disabled"
              role="option"
            >
              <div
                class="rcx-item__content rcx-option__content"
              >
                <div
                  class="rcx-item__title"
                  id="_r_d_"
                >
                  Custom empty placeholder
                </div>
              </div>
            </li>
          </ol>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`[Options Component] renders Default without crashing 1`] = `
<body>
  <div>
    <div
      class="rcx-box rcx-box--full rcx-css-cnp486"
    >
      <div
        class="rcx-box rcx-box--full rcx-options"
      >
        <div
          class="rcx-box rcx-box--full rcx-tile--elevation-2 rcx-tile rcx-css-2lacg2"
        >
          <ol
            aria-activedescendant="2"
            aria-multiselectable="true"
            class="rcx-box rcx-box--full rcx-tile--elevation-0 rcx-tile rcx-css-1prma2i rcx-css-1u2ujs0"
            role="listbox"
          >
            <li
              aria-disabled="false"
              aria-selected="false"
              class="rcx-item rcx-item--inset-md rcx-item--clickable rcx-option"
              role="option"
              value="1"
            >
              <div
                class="rcx-item__content rcx-option__content"
              >
                <div
                  class="rcx-item__title"
                  id="_r_0_"
                >
                  a teste 1
                </div>
              </div>
            </li>
            <li
              aria-disabled="false"
              aria-selected="false"
              class="rcx-item rcx-item--inset-md rcx-item--clickable rcx-item--focused rcx-option rcx-option--focus"
              role="option"
              value="2"
            >
              <div
                class="rcx-item__content rcx-option__content"
              >
                <div
                  class="rcx-item__title"
                  id="_r_1_"
                >
                  b teste 2
                </div>
              </div>
            </li>
            <li
              aria-disabled="false"
              aria-selected="true"
              class="rcx-item rcx-item--inset-md rcx-item--clickable rcx-item--selected rcx-option rcx-option--selected"
              role="option"
              value="3"
            >
              <div
                class="rcx-item__content rcx-option__content"
              >
                <div
                  class="rcx-item__title"
                  id="_r_2_"
                >
                  c teste 3
                </div>
              </div>
            </li>
            <li
              aria-disabled="false"
              aria-selected="false"
              class="rcx-item rcx-item--inset-md rcx-item--clickable rcx-option"
              role="option"
              value="4"
            >
              <div
                class="rcx-item__content rcx-option__content"
              >
                <div
                  class="rcx-item__title"
                  id="_r_3_"
                >
                  d testeadsasdasdasdasdjhasjfhasdkjfhaskdfjhkasjdfhkasjdhfkasjdhfkasjdhfkasjdhfkasdjhfkasdjhfaksjdfhkasjdh 4
                </div>
              </div>
            </li>
          </ol>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`[Options Component] renders EmptyOptions without crashing 1`] = `
<body>
  <div>
    <div
      class="rcx-box rcx-box--full rcx-css-cnp486"
    >
      <div
        class="rcx-box rcx-box--full rcx-options"
      >
        <div
          class="rcx-box rcx-box--full rcx-tile--elevation-2 rcx-tile rcx-css-2lacg2"
        >
          <ol
            aria-multiselectable="true"
            class="rcx-box rcx-box--full rcx-tile--elevation-0 rcx-tile rcx-css-1prma2i rcx-css-1u2ujs0"
            role="listbox"
          >
            <li
              aria-disabled="true"
              aria-selected="false"
              class="rcx-item rcx-item--inset-md rcx-item--clickable rcx-item--disabled rcx-option rcx-option--disabled"
              role="option"
            >
              <div
                class="rcx-item__content rcx-option__content"
              >
                <div
                  class="rcx-item__title"
                  id="_r_c_"
                >
                  Empty
                </div>
              </div>
            </li>
          </ol>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`[Options Component] renders Grouped without crashing 1`] = `
<body>
  <div>
    <div
      class="rcx-box rcx-box--full rcx-css-cnp486"
    >
      <div
        class="rcx-box rcx-box--full rcx-options"
      >
        <div
          class="rcx-box rcx-box--full rcx-tile--elevation-2 rcx-tile rcx-css-2lacg2"
        >
          <ol
            aria-activedescendant="1"
            aria-multiselectable="true"
            class="rcx-box rcx-box--full rcx-tile--elevation-0 rcx-tile rcx-css-1prma2i rcx-css-1u2ujs0"
            role="listbox"
          >
            <li
              class="rcx-item-group-header rcx-item-group-header--inset-md rcx-option__header"
              role="presentation"
            >
              <div
                class="rcx-item-group-title"
                id="_r_e_"
              >
                Recent
              </div>
            </li>
            <li
              aria-disabled="false"
              aria-selected="false"
              class="rcx-item rcx-item--inset-md rcx-item--clickable rcx-item--focused rcx-option rcx-option--focus"
              role="option"
              value="1"
            >
              <div
                class="rcx-item__content rcx-option__content"
              >
                <div
                  class="rcx-item__title"
                  id="_r_f_"
                >
                  a teste 1
                </div>
              </div>
            </li>
            <li
              aria-disabled="false"
              aria-selected="false"
              class="rcx-item rcx-item--inset-md rcx-item--clickable rcx-option"
              role="option"
              value="2"
            >
              <div
                class="rcx-item__content rcx-option__content"
              >
                <div
                  class="rcx-item__title"
                  id="_r_g_"
                >
                  b teste 2
                </div>
              </div>
            </li>
            <li
              aria-hidden="true"
              class="rcx-item-divider"
            />
            <li
              class="rcx-item-group-header rcx-item-group-header--inset-md rcx-option__header"
              role="presentation"
            >
              <div
                class="rcx-item-group-title"
                id="_r_h_"
              >
                All
              </div>
            </li>
            <li
              aria-disabled="false"
              aria-selected="true"
              class="rcx-item rcx-item--inset-md rcx-item--clickable rcx-item--selected rcx-option rcx-option--selected"
              role="option"
              value="3"
            >
              <div
                class="rcx-item__content rcx-option__content"
              >
                <div
                  class="rcx-item__title"
                  id="_r_i_"
                >
                  c teste 3
                </div>
              </div>
            </li>
            <li
              aria-disabled="false"
              aria-selected="false"
              class="rcx-item rcx-item--inset-md rcx-item--clickable rcx-option"
              role="option"
              value="4"
            >
              <div
                class="rcx-item__content rcx-option__content"
              >
                <div
                  class="rcx-item__title"
                  id="_r_j_"
                >
                  d teste 4
                </div>
              </div>
            </li>
          </ol>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`[Options Component] renders OptionStory without crashing 1`] = `
<body>
  <div>
    <div
      class="rcx-box rcx-box--full rcx-css-cnp486"
    >
      <div
        class="rcx-box rcx-box--full rcx-options"
      >
        <div
          class="rcx-box rcx-box--full rcx-tile--elevation-2 rcx-tile rcx-css-2lacg2"
        >
          <ol
            aria-activedescendant="2"
            aria-multiselectable="true"
            class="rcx-box rcx-box--full rcx-tile--elevation-0 rcx-tile rcx-css-1prma2i rcx-css-1u2ujs0"
            role="listbox"
          >
            <li
              aria-disabled="false"
              aria-selected="false"
              class="rcx-item rcx-item--inset-md rcx-item--clickable rcx-option"
              role="option"
              value="1"
            >
              <div
                class="rcx-item__content rcx-option__content"
              >
                <div
                  class="rcx-item__title"
                  id="_r_4_"
                >
                  a teste 1
                </div>
              </div>
            </li>
            <li
              aria-disabled="false"
              aria-selected="false"
              class="rcx-item rcx-item--inset-md rcx-item--clickable rcx-item--focused rcx-option rcx-option--focus"
              role="option"
              value="2"
            >
              <div
                class="rcx-item__content rcx-option__content"
              >
                <div
                  class="rcx-item__title"
                  id="_r_5_"
                >
                  b teste 2
                </div>
              </div>
            </li>
            <li
              aria-disabled="false"
              aria-selected="true"
              class="rcx-item rcx-item--inset-md rcx-item--clickable rcx-item--selected rcx-option rcx-option--selected"
              role="option"
              value="3"
            >
              <div
                class="rcx-item__content rcx-option__content"
              >
                <div
                  class="rcx-item__title"
                  id="_r_6_"
                >
                  c teste 3
                </div>
              </div>
            </li>
            <li
              aria-disabled="false"
              aria-selected="false"
              class="rcx-item rcx-item--inset-md rcx-item--clickable rcx-option"
              role="option"
              value="4"
            >
              <div
                class="rcx-item__content rcx-option__content"
              >
                <div
                  class="rcx-item__title"
                  id="_r_7_"
                >
                  d testeadsasdasdasdasdjhasjfhasdkjfhaskdfjhkasjdfhkasjdhfkasjdhfkasjdhfkasjdhfkasdjhfkasdjhfaksjdfhkasjdh 4
                </div>
              </div>
            </li>
          </ol>
        </div>
      </div>
    </div>
  </div>
</body>
`;
